[package]
name = "kavi"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kavi"
path = "src/main.rs"

[dependencies]
ropey = "1.1.0"
unicode-width = "0.1.5"
structopt = { version = "*", default-features = false }
dirs = "2.0.2"
crossterm = "0.16.0"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_debug"] }
simplelog = "0.7.5"
lazy_static = "1.4.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
