[package]
name = "ted"
version = "0.1.0"
authors = ["prataprc <prataprc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ted"
path = "src/main.rs"

[[bin]]
name = "vk"
path = "src/bin/vk/main.rs"

[dependencies]
ropey = "1.1.0"
regex = "1.3.7"
unicode-width = "0.1.5"
structopt = { version = "*", default-features = false }
dirs = "2.0.2"
crossterm = "0.17.7"
log = { version = "0.4.8", features = ["max_level_trace", "release_max_level_trace"] }
simplelog = "0.7.5"
lazy_static = "1.4.0"
tree-sitter = "0.6.3"
toml = "0.5.6"
serde = "1.0.110"
serde_derive = "1.0.106"

# bin/vk
specs = { version = "0.16.1", features = ["specs-derive"] }
vulkano = { version = "0.21", path = "/home/prataprc/graphics/vulkano/vulkano/" }
glfw = "0.41.0"
uuid = "0.8"

[build-dependencies]
cc = "1.0.46"
which = "3.1.1"
autocfg = "1.0.0"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
